<resources>
    <string name="app_name">YourSkin</string>
    <string name="scan">Scan</string>
    <string name="products">Products</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="scaneaza">Scaneaza</string>
    <string name="vrei_sa_afli_ce_ingrediente_daunatoare_se_afla_in_produsele_tale_dermato_cosmetice_scaneaza_portiunea_cu_ingrediente_a_produsului_dorit_si_afla_acum">Vrei sa afli ce ingrediente daunatoare se afla in produsele tale dermato-cosmetice? Scaneaza portiunea cu ingrediente a produsului dorit si afla acum!</string>
    <string name="fotografiaza_sau_alege_o_poza_din_galerie_pentru_a_descoperi_ingredientele">Fotografiaza sau alege o poza din galerie pentru a descoperi ingredientele!</string>
    <string name="textview">TextView</string>
    <string name="button123">Button123</string>
    <string name="take_a_picture_or_choose_one_from_the_gallery_to_discover_the_harmful_ingredients">Take a picture or choose one from the gallery to discover the harmful ingredients!</string>
    <string name="how_to_scan">How to scan?</string>
    <string name="_2_photograph_the_back_of_the_product">2. Photograph the back of the product.</string>

</resources>