<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".MainActivity">



    <Button
        android:id="@+id/button1"

        android:layout_width="121dp"
        android:layout_height="119dp"
        android:background="@drawable/button"
        android:backgroundTintMode="add"
        android:fontFamily="@font/carter_one"
        android:text="@string/scan"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <Button
        android:id="@+id/button2"
        android:layout_width="197dp"
        android:layout_height="199dp"
        android:background="@drawable/button"
        android:fontFamily="@font/carter_one"
        android:text="@string/products"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />

    <Button
        android:id="@+id/button3"
        android:layout_width="171dp"
        android:layout_height="176dp"
        android:background="@drawable/button"
        android:backgroundTintMode="add"
        android:fontFamily="@font/carter_one"
        android:text="@string/ingredients"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />


</androidx.constraintlayout.widget.ConstraintLayout>