<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scann2"
    tools:context=".ScanActivity">

    <Button
        android:id="@+id/scanBtn"
        android:layout_width="207dp"
        android:layout_height="63dp"
        android:background="#ABFDFDFD"
        android:fontFamily="@font/arbutus"
        android:text="@string/scan"
        android:textAlignment="center"
        android:textColor="#A3B6BF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="319dp"
        android:layout_height="77dp"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:text="@string/take_a_picture_or_choose_one_from_the_gallery_to_discover_the_harmful_ingredients"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_search"
        android:layout_width="308dp"
        android:layout_height="552dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="277dp"
        android:layout_height="107dp"
        android:fontFamily="@font/arbutus"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="190dp"
        android:layout_height="51dp"
        android:clickable="true"
        android:fontFamily="@font/arbutus"
        android:text="@string/how_to_scan"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanBtn"
        app:layout_constraintVertical_bias="0.777" />


</androidx.constraintlayout.widget.ConstraintLayout>